NetBSD Problem Report #47744

From kardel@cerberus.kardel.name  Mon Apr 15 20:08:56 2013
Return-Path: <kardel@cerberus.kardel.name>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id CAAF163E866
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 15 Apr 2013 20:08:55 +0000 (UTC)
Message-Id: <20130415200850.E102E2B1FCE@cerberus.kardel.name>
Date: Mon, 15 Apr 2013 22:08:50 +0200 (CEST)
From: kardel@netbsd.org
Reply-To: kardel@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: netstat -s stops output prematurely when ipsec is not compiled in
X-Send-Pr-Version: 3.95

>Number:         47744
>Category:       bin
>Synopsis:       netstat -s stops output prematurely when ipsec is not compiled in
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Apr 15 20:10:00 +0000 2013
>Closed-Date:    Sun Feb 25 19:41:18 +0000 2018
>Last-Modified:  Sun Feb 25 19:41:18 +0000 2018
>Originator:     Frank Kardel
>Release:        NetBSD 6.99.19
>Organization:

>Environment:
System: NetBSD cerberus.kardel.name 6.99.19 NetBSD 6.99.19 (CERBERUS) #1: Mon Apr 15 21:37:55 CEST 2013 kardel@pip.kardel.name:/src/obj.i386/sys/arch/i386/compile/CERBERUS i386
Architecture: i386
Machine: i386
>Description:
	On kernels without ipsec (e. g. GENERIC) netstat -s stops output when ipsec stats 
	cannnot be read. This suppresses other statistics such as IPv6 status.

icmp:
	287 calls to icmp_error
	3 errors not generated because old message was icmp
	Output histogram:
[... snip ...]
ip:
	10058246 total packets received
	0 bad header checksums
	0 with size smaller than minimum
	0 with data size < data length
	0 with length > max ip packet size
	0 with header length < data size
	0 with data length < header length
	0 with bad options
	0 with incorrect version number
	332 fragments received
	0 fragments dropped (dup or out of space)
	0 fragments dropped (out of ipqent)
	0 malformed fragments dropped
	0 fragments dropped after timeout
	163 packets reassembled ok
	4494978 packets for this host
	0 packets for unknown/unsupported protocol
	5560577 packets forwarded (0 packets fast forwarded)
	941 packets not forwardable
	0 redirects sent
	0 packets no matching gif found
	4834215 packets sent from this host
	245 packets sent with fabricated ip header
	0 output packets dropped due to no bufs, etc.
	0 output packets discarded due to no route
	78 output datagrams fragmented
	82 fragments created
	0 datagrams that can't be fragmented
	0 datagrams with bad address in header
netstat: net.inet.ipsec.ipsecstats: No such file or directory
[... other statistics missing ...]

>How-To-Repeat:
	Try netstat -s on a GENERIC kernel.

>Fix:
	netstat

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47744 CVS commit: src/usr.bin/netstat
Date: Mon, 15 Apr 2013 17:20:39 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Mon Apr 15 21:20:39 UTC 2013

 Modified Files:
 	src/usr.bin/netstat: fast_ipsec.c

 Log Message:
 PR/47744: Frank Kardel: netstat -s stops output prematurely when ipsec is not
 compiled.
 If the first sysctl fails return silently.
 XXX: pullup-6


 To generate a diff of this commit:
 cvs rdiff -u -r1.19 -r1.20 src/usr.bin/netstat/fast_ipsec.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Frank Kardel <kardel@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: PR/47744 CVS commit: src/usr.bin/netstat
Date: Mon, 15 Apr 2013 23:27:29 +0200

 Thanks!

 Frank
 On 04/15/13 23:25, Christos Zoulas wrote:
 > The following reply was made to PR bin/47744; it has been noted by GNATS.
 >
 > From: "Christos Zoulas" <christos@netbsd.org>
 > To: gnats-bugs@gnats.NetBSD.org
 > Cc:
 > Subject: PR/47744 CVS commit: src/usr.bin/netstat
 > Date: Mon, 15 Apr 2013 17:20:39 -0400
 >
 >   Module Name:	src
 >   Committed By:	christos
 >   Date:		Mon Apr 15 21:20:39 UTC 2013
 >   
 >   Modified Files:
 >   	src/usr.bin/netstat: fast_ipsec.c
 >   
 >   Log Message:
 >   PR/47744: Frank Kardel: netstat -s stops output prematurely when ipsec is not
 >   compiled.
 >   If the first sysctl fails return silently.
 >   XXX: pullup-6
 >   
 >   
 >   To generate a diff of this commit:
 >   cvs rdiff -u -r1.19 -r1.20 src/usr.bin/netstat/fast_ipsec.c
 >   
 >   Please note that diffs are not public domain; they are subject to the
 >   copyright notices on the relevant files.
 >   

State-Changed-From-To: open->closed
State-Changed-By: maxv@NetBSD.org
State-Changed-When: Sun, 25 Feb 2018 19:41:18 +0000
State-Changed-Why:
The issue was fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.