PR/47744: Frank Kardel: netstat -s stops output prematurely when ipsec is not compiled. If the first sysctl fails return silently. XXX: pullup-6