usr.bin/netstat/fast_ipsec.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: fast_ipsec.c,v 1.19 2012/03/22 20:34:43 drochner Exp $ */
+/*	$NetBSD: fast_ipsec.c,v 1.20 2013/04/15 21:20:39 christos Exp $ */
 /* 	$FreeBSD: src/tools/tools/crypto/ipsecstats.c,v 1.1.4.1 2003/06/03 00:13:13 sam Exp $ */
 
 /*-
@@ -33,7 +33,7 @@
 #include <sys/cdefs.h>
 #ifndef lint
 #ifdef __NetBSD__
-__RCSID("$NetBSD: fast_ipsec.c,v 1.19 2012/03/22 20:34:43 drochner Exp $");
+__RCSID("$NetBSD: fast_ipsec.c,v 1.20 2013/04/15 21:20:39 christos Exp $");
 #endif
 #endif /* not lint*/
 
@@ -152,8 +152,12 @@ fast_ipsec_stats(u_long off, const char *name)
 	slen = sizeof(ipsecstats);
 	status = sysctlbyname("net.inet.ipsec.ipsecstats", ipsecstats, &slen,
 			      NULL, 0);
-	if (status < 0 && errno != ENOMEM)
-		err(1, "net.inet.ipsec.ipsecstats");
+	if (status < 0) {
+		if (errno == ENOENT)
+			return;
+		if (errno != ENOMEM)
+			err(1, "net.inet.ipsec.ipsecstats");
+	}
 
 	slen = sizeof (ahstats);
 	status = sysctlbyname("net.inet.ah.ah_stats", ahstats, &slen, NULL, 0);
